use log file